--- a/phoneBook/index.html
+++ b/phoneBook/index.html
@@ -1,10 +1,11 @@
 <html ng-app="phoneBook">
 <head>
+    <meta charset="UTF-8">
     <title>Phone Book</title>
     <link rel="stylesheet" href="lib/bootstrap/bootstrap.css">
     <style>
         .jumbotron {
-            width: 400px;
+            width: 600px;
             text-align: center;
             margin-top: 20px;
             margin-left: auto;
@@ -19,25 +20,47 @@
         .btn{
             margin-top: 20px;
         }
+        .selected{
+            background-color: rgb(248, 248, 190);
+        }
     </style>
     <script src="lib/angular/angular.js"></script>
+    <script src="lib/angular/angular-messages.js"></script>
+    <script src="lib/angular/angular-locale_pt-br.js"></script>
     <script>
-        angular.module("phoneBook", []);
+        angular.module("phoneBook", ["ngMessages"]);
         angular.module("phoneBook").controller("phoneBookCtrl", function ($scope) {
             $scope.app = "Phone Book";
             $scope.contacts = [
-                {name:"John", phone: "999989009"},
-                {name:"Ann", phone: "999989679"},
-                {name:"Bob", phone: "999867549"},
+                {name:"John", phone: "999989009", date: new Date(), company: {name: "Oi" , code: "14", category: "Cellphone"}},
+                {name:"Ann", phone: "999989679", date: new Date(), company: {name: "Vivo" , code: "15", category: "Cellphone"}},
+                {name:"Bob", phone: "999867549", date: new Date(), company: {name: "Tim" , code: "41", category: "Cellphone"}},
             ];
             $scope.companies = [
-                {name: "Oi" , code: "14" },
-                {name: "Vivo" , code: "15" },
-                {name: "Tim" , code: "41" }
+                {name: "Oi" , code: "14", category: "Cellphone", price: 2},
+                {name: "Vivo" , code: "15", category: "Cellphone", price: 1},
+                {name: "Tim" , code: "41", category: "Cellphone", price: 3},
+                {name: "Claro" , code: "27", category: "Phone", price: 1},
+                {name: "GVT" , code: "82", category: "Phone", price: 2}
             ]
             $scope.addContact = function (contact) {
                 $scope.contacts.push(angular.copy(contact));
                 delete $scope.contact;
+                $scope.contactForm.$setPristine();
+            };
+            $scope.deleteContact = function (contacts) {
+                $scope.contacts = contacts.filter(function (contact) {
+                    if (!contact.selected) return contact;
+                });
+            }
+            $scope.isContactSelected = function (contacts) {
+                return contacts.some(function (contact) {
+                   return contact.selected;
+               });
+            };
+            $scope.orderBy = function (field) {
+                $scope.orderCriteria = field;
+                $scope.orderDirection = !$scope.orderDirection;
             };
         });
     </script>
@@ -45,40 +68,81 @@
 <body ng-controller="phoneBookCtrl">
     <div class="jumbotron">
         <h3>{{app}}</h3>
-        <table class="table table-striped">
+        <input class="form-control" type="text" ng-model="searchTerm" placeholder="O que você está buscando?"/>
+        <table class="table">
             <tr>
-                <th>Name</th>
-                <th>Phone</th>
+                <th></th>
+                <th><a href="" ng-click="orderBy('name')">Name</a></th>
+                <th><a href="" ng-click="orderBy('phone')">Phone</a></th>
                 <th>Company</th>
+                <th>Date</th>
             </tr>
-            <tr ng-repeat="contact in contacts">
-                <td>{{contact.name}}</td>
+            <tr ng-class="{selected: contact.selected}" ng-repeat="contact in contacts | filter:{name: searchTerm} | orderBy:orderCriteria:orderDirection">
+                <td><input type="checkbox" ng-model="contact.selected"></td>
+                <td>{{contact.name | uppercase}}</td>
                 <td>{{contact.phone}}</td>
-                <td>{{contact.company.name}}</td>
+                <td>{{contact.company.name | lowercase}}</td>
+                <td>{{contact.date | date:'dd/MM/yyyy HH:mm'}}</td>
             </tr>
         </table>
         <hr/>
-        <input 
-            class="form-control" 
-            type="text" 
-            ng-model="contact.name" 
-            placeholder="Name"
-            />
-        <input 
-            class="form-control" 
-            type="text" 
-            ng-model="contact.phone" 
-            placeholder="Phone Number"
-            />
-        <select class="form-control" ng-model="contact.company" ng-options="company.name for company in companies">
-            <option selected disabled value="">Select a company</option>
-        </select>
+        <form name="contactForm">
+            <input 
+                class="form-control" 
+                type="text" 
+                name="name"
+                ng-model="contact.name"
+                ng-required=true; 
+                ng-minlength="10"
+                placeholder="Name"
+                />
+            <input 
+                class="form-control" 
+                type="text" 
+                name="phone"
+                ng-model="contact.phone" 
+                ng-required=true; 
+                ng-pattern="/^\d{4,5}-\d{4}$/"
+                placeholder="Phone Number"
+                />
+            <select 
+                class="form-control"
+                name="company" 
+                ng-model="contact.company"
+                ng-required=true;  
+                ng-options="company.name + ' ( ' + (company.price | currency) + ' )' group by company.category for company in companies | orderBy:'name'">
+                <option selected disabled value="">Select a company</option>
+            </select>
+        </form>
+            
+        <div ng-messages="contactForm.name.$error" class="alert alert-danger">
+            <div ng-message="required">
+                Por favor, preencha o campo nome!
+            </div>
+            <div ng-message="minlength">
+                    O campo nome deve ter no mínimo 10 caracteres.
+            </div>
+        </div>
+            
+            <div ng-show="contactForm.phone.$error.required && contactForm.phone.$dirty" class="alert alert-danger">
+                    Por favor, preencha o campo telefone!
+            </div>
+            <div ng-show="contactForm.phone.$error.pattern" class="alert alert-danger">
+                    O campo telefone deve ter o formato 99999-9999.
+            </div>
         <button 
             class="btn btn-dark btn-block" 
             ng-click="addContact(contact)" 
-            ng-disabled="!contact.name || !contact.phone">
+            ng-disabled="contactForm.$invalid" >
             Adicionar Contato
         </button>
+        <button 
+            class="btn btn-danger btn-block" 
+            ng-click="deleteContact(contacts)"
+            ng-show="isContactSelected(contacts)"> 
+            Apagar Contatos
+        </button>
     </div>
+    <!-- <div ng-include="'footer.html'"></div> -->
 </body>
 </html>
