--- a/phoneBook/index.html
+++ b/phoneBook/index.html
@@ -2,76 +2,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Phone Book</title>
-    <link rel="stylesheet" href="lib/bootstrap/bootstrap.css">
-    <style>
-        .jumbotron {
-            width: 600px;
-            text-align: center;
-            margin-top: 20px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        .table{
-            margin-top: 20px;
-        }
-        .form-control{
-            margin-bottom: 15px;
-        }
-        .btn{
-            margin-top: 20px;
-        }
-        .selected{
-            background-color: rgb(248, 248, 190);
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="lib/bootstrap/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/app.css">
+    <link rel="stylesheet" type="text/css" href="css/ui.css">
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular/angular-messages.js"></script>
     <script src="lib/angular/angular-locale_pt-br.js"></script>
-    <script>
-        angular.module("phoneBook", ["ngMessages"]);
-        angular.module("phoneBook").controller("phoneBookCtrl", function ($scope) {
-            $scope.app = "Phone Book";
-            $scope.contacts = [
-                {name:"John", phone: "999989009", date: new Date(), company: {name: "Oi" , code: "14", category: "Cellphone"}},
-                {name:"Ann", phone: "999989679", date: new Date(), company: {name: "Vivo" , code: "15", category: "Cellphone"}},
-                {name:"Bob", phone: "999867549", date: new Date(), company: {name: "Tim" , code: "41", category: "Cellphone"}},
-            ];
-            $scope.companies = [
-                {name: "Oi" , code: "14", category: "Cellphone", price: 2},
-                {name: "Vivo" , code: "15", category: "Cellphone", price: 1},
-                {name: "Tim" , code: "41", category: "Cellphone", price: 3},
-                {name: "Claro" , code: "27", category: "Phone", price: 1},
-                {name: "GVT" , code: "82", category: "Phone", price: 2}
-            ]
-            $scope.addContact = function (contact) {
-                $scope.contacts.push(angular.copy(contact));
-                delete $scope.contact;
-                $scope.contactForm.$setPristine();
-            };
-            $scope.deleteContact = function (contacts) {
-                $scope.contacts = contacts.filter(function (contact) {
-                    if (!contact.selected) return contact;
-                });
-            }
-            $scope.isContactSelected = function (contacts) {
-                return contacts.some(function (contact) {
-                   return contact.selected;
-               });
-            };
-            $scope.orderBy = function (field) {
-                $scope.orderCriteria = field;
-                $scope.orderDirection = !$scope.orderDirection;
-            };
-        });
-    </script>
+    <script src="js/app.js"></script>
+    <script src="js/controllers/phoneBookCtrl.js"></script>
+    <script src="js/services/contactsAPISservice.js"></script>
+    <script src="js/services/companiesAPIService.js"></script>
+    <script src="js/services/serialGeneratorService.js"></script>
+    <script src="js/config//serialGeneratorConfig.js"></script>
+    <script src="js/filters/nameFilter.js"></script>
+    <script src="js/filters/ellipsisFilter.js"></script>
+    <script src="js/directives/uiAlertDirective.js"></script>
+    <script src="js/configValue.js"></script>
 </head>
 <body ng-controller="phoneBookCtrl">
     <div class="jumbotron">
         <h3>{{app}}</h3>
+
+        <ui-alert title="Ops, houve um problema!" message="message">
+            Não foi possível carregar os dados
+        </ui-alert>
+  
         <input class="form-control" type="text" ng-model="searchTerm" placeholder="O que você está buscando?"/>
         <table class="table">
             <tr>
                 <th></th>
+                <th>Serial</th>
                 <th><a href="" ng-click="orderBy('name')">Name</a></th>
                 <th><a href="" ng-click="orderBy('phone')">Phone</a></th>
                 <th>Company</th>
@@ -79,7 +39,8 @@
             </tr>
             <tr ng-class="{selected: contact.selected}" ng-repeat="contact in contacts | filter:{name: searchTerm} | orderBy:orderCriteria:orderDirection">
                 <td><input type="checkbox" ng-model="contact.selected"></td>
-                <td>{{contact.name | uppercase}}</td>
+                <td>{{contact.serial}}</td>
+                <td>{{contact.name | name | ellipsis:10}}</td>
                 <td>{{contact.phone}}</td>
                 <td>{{contact.company.name | lowercase}}</td>
                 <td>{{contact.date | date:'dd/MM/yyyy HH:mm'}}</td>
@@ -105,6 +66,15 @@
                 ng-pattern="/^\d{4,5}-\d{4}$/"
                 placeholder="Phone Number"
                 />
+            <input 
+                class="form-control" 
+                type="text" 
+                name="date"
+                ng-model="contact.date" 
+                ng-required=true; 
+                placeholder="Date"
+                ui-date 
+                />
             <select 
                 class="form-control"
                 name="company" 
@@ -115,11 +85,11 @@
             </select>
         </form>
             
-        <div ng-messages="contactForm.name.$error" class="alert alert-danger">
-            <div ng-message="required">
+        <div ng-messages="contactForm.name.$dirty">
+            <div ng-message="required" class="alert alert-danger">
                 Por favor, preencha o campo nome!
             </div>
-            <div ng-message="minlength">
+            <div ng-message="minlength" class="alert alert-danger">
                     O campo nome deve ter no mínimo 10 caracteres.
             </div>
         </div>
@@ -143,6 +113,6 @@
             Apagar Contatos
         </button>
     </div>
-    <!-- <div ng-include="'footer.html'"></div> -->
+    <!-- <div ng-include="'view/footer.html'"></div> -->
 </body>
 </html>
